fixed mobile landscape menu overflow

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -93,7 +93,7 @@
 .main-navigation.toggled > .menu-menu-1-container {
 	height: 100vh;
 	top: 0;
-	transition: 1s;
+	transition: .5s;
 
 }
 
@@ -161,7 +161,7 @@
 	left: 0;
 	right: 0;
 	height: 100vh;
-	top: -100vh;
+	top: -200vh;
 	transition: .5s;
 	
 
